<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>